# augr

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  pyproject.toml
examples/: CMakeLists.txt  app.cpp  graph.cpp  ports.cpp
examples/bubble/: bubble_dsp.h
examples/bubble/format/exe/: CMakeLists.txt  main.cpp
examples/chain/: README.md  chain_dsp.h
examples/chain/format/exe/: CMakeLists.txt  main.cpp
examples/daw/: README.md
examples/daw/cmake/: Common.cmake
examples/daw/format/exe/: CMakeLists.txt  main.cpp
examples/frenchbell/: README.md  frenchbell_dsp.h
examples/frenchbell/format/exe/: CMakeLists.txt  main.cpp
examples/multi/: README.md  osc_dsp.h
examples/multi/cmake/: Common.cmake
examples/multi/format/exe/: CMakeLists.txt  main.cpp
examples/osc/: README.md
examples/osc/format/exe/: CMakeLists.txt  main.cpp
examples/panner/: CMakeLists.txt  app.cpp  app.h  main.cpp
examples/panner/format/vst3/: CMakeLists.txt  plug_view_impl.cpp  plug_view_impl.h
examples/panner/vst3/: CMakeLists.txt  plug_editor.h  plug_view.h
examples/rawdaw/: flanger_dsp.h  freeverb_dsp.h  frenchbell_dsp.h  phaser_dsp.h
examples/rawdaw/format/exe/: CMakeLists.txt  main.cpp
examples/serialize/: CMakeLists.txt  main.cpp
src/augite/: CMakeLists.txt  part.cpp
src/augite-core/: CMakeLists.txt
src/augite-core/src/: augite.cpp
src/augite-core/src/app/: CMakeLists.txt  app.cpp  base_app.cpp  rack_app.cpp
src/augite-core/src/archiver/: module_widget_archiver.cpp  rack_viewer_archiver.cpp  subrack_view_archiver.cpp  subrack_viewer_archiver.cpp  viewer_archiver.cpp
src/augite-core/src/controller/: rack_selection.cpp  subrack_controller.cpp
src/augite-core/src/inspector/: CMakeLists.txt  inspector_builder.cpp  inspector_dock.cpp  module_inspector.cpp  voicebank_inspector.cpp
src/augite-core/src/shell/: base_window.cpp
src/augite-core/src/system/: imgui_system.cpp  imnodes_system.cpp  implot_system.cpp
src/augite-core/src/view/: CMakeLists.txt  console_view.cpp  model_view.cpp  probe_view.cpp  scope_view.cpp  spectral_view.cpp  subrack_view.cpp  view.cpp
src/augite-core/src/viewer/: CMakeLists.txt  dexie_voice_viewer.cpp  module_viewer.cpp  probe_viewer.cpp  (+6 more)
src/augite-fm/: CMakeLists.txt
src/augite/app/: CMakeLists.txt  app.cpp  app.h  base_app.cpp  base_app.h  clipboard.h  frame_app.h  rack_app.cpp  rack_app.h
src/augite/archiver/: CMakeLists.txt  module_widget_archiver.cpp  module_widget_archiver.h  rack_view_archiver.cpp  rack_view_archiver.h  rack_viewer_archiver.cpp  subrack_view_archiver.cpp  subrack_view_archiver.h  subrack_viewer_archiver.cpp  subrack_viewer_archiver.h  viewer_archiver.cpp  viewer_archiver.h
src/augite/controller/: CMakeLists.txt  controller.h  document_controller.h  rack_controller.cpp  rack_controller.h  rack_selection.cpp  rack_selection.h  subrack_controller.cpp  subrack_controller.h
src/augite/frame/: CMakeLists.txt  document_viewer.h  frame.cpp  frame.h  graph_frame.cpp  graph_frame.h  rack_frame.cpp  rack_frame.h  rack_viewer.h  subrack_frame.cpp  subrack_frame.h  subrack_viewer.cpp  subrack_viewer.h  viewer.h
src/augite/inspector/: inspector.cpp  inspector.h  inspector_builder.cpp  inspector_dock.cpp  inspector_dock.h  inspector_manufacturer.h  module_inspector.cpp  module_inspector.h  voicebank_inspector.cpp
src/augite/shell/: CMakeLists.txt  base_window.cpp  base_window.h  shell.h
src/augite/system/: CMakeLists.txt  imnodes_system.cpp
src/augite/view/: CMakeLists.txt  document_view.h  model_view.cpp  model_view.h  probe_view.cpp  probe_view.h  rack_selection.cpp  rack_selection.h  rack_view.cpp  rack_view.h  scope_view.cpp  spectral_view.cpp  spectral_view.h  subrack_view.cpp  subrack_view.h
src/augite/viewer/: CMakeLists.txt  dexie_voice_viewer.cpp  dexie_voice_viewer.h  document_viewer.h  module_viewer.cpp  module_viewer.h  probe_viewer.cpp  rack_viewer.cpp  rack_viewer.h  scope_viewer.cpp  scope_viewer.h  spectral_viewer.cpp  spectral_viewer.h  subrack_viewer.cpp  subrack_viewer.h  viewer.cpp  viewer.h  viewer_manager.cpp  viewer_manager.h  viewer_manufacturer.h  voice_viewer.h
src/augite/vst3/: CMakeLists.txt  plug_view.h
src/augite/widget/: CMakeLists.txt  box_widget.h  button_widget.cpp  check_button_widget.cpp  combo_widget.cpp  dock.cpp  dock.h  frame.cpp  frame.h  h_bargraph_widget.cpp  h_box_widget.cpp  h_slider_widget.cpp  knob_widget.cpp  module_widget.cpp  module_widget.h  num_entry_widget.cpp  rack_widget.cpp  rack_widget.h  scope_widget.cpp  scope_widget.h  spectral_widget.cpp  spectral_widget.h  subrack_widget.cpp  subrack_widget.h  v_bargraph_widget copy.cpp  v_bargraph_widget.cpp  v_box_widget.cpp  v_slider_widget.cpp  widget.cpp  widget.h  widget_builder.cpp  widget_builder.h  widget_manufacturer.cpp  widget_manufacturer.h
src/augr/: CMakeLists.txt  audio.cpp  part.cpp
src/augr-core/: CMakeLists.txt
src/augr-core/src/: archiver.cpp  archiver_manufacturer.cpp  audio.cpp  document.cpp  model.cpp  model_manufacturer.cpp  model_registry.cpp  part.cpp  subject.cpp
src/augr-faust/: CMakeLists.txt
src/augr-faust-library/physicalModeling/: CMakeLists.txt  physicalModeling.cpp
src/augr-faust/src/: faust_dsp.cpp  faust_dsp_ui.cpp
src/augr-fm/: CMakeLists.txt
src/augr-fm/src/: dexie.cpp  dexie_env.cpp  dexie_lfo.cpp  dexie_voice.cpp  dx7_algorithm.cpp  dx7_patch.cpp  envelope.cpp  library.cpp  operator.cpp  patch.cpp  voice.cpp  voice_bank.cpp
src/augr-rack/: CMakeLists.txt
src/augr-rack/src/: CMakeLists.txt  audio_pin.cpp  graph.cpp  library.cpp  node.cpp  pin.cpp  rack.cpp  rack_doc.cpp  subrack.cpp  voice.cpp  voicebank.cpp  wire.cpp
src/augr-volt/: CMakeLists.txt
src/augr-volt/src/: cv_io.cpp  library.cpp
src/augr/core/: CMakeLists.txt
src/augr/rack/: CMakeLists.txt  audio_pin.h  graph.cpp  graph.h  model.cpp  model.h  model_manufacturer.cpp  node.cpp  node.h  pin.cpp  port.h  rack.cpp  rack.h  wire.cpp
src/augr/rtaudio/: CMakeLists.txt
src/imnodes/: CMakeLists.txt
src/midifile/: CMakeLists.txt
tests/document/: CMakeLists.txt  README.md  main.cpp
(+483 files in other folders)
